--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@decentralized-identity/did-common-typescript",
+  "name": "@decentralized-identity/did-crypto-typescript",
   "version": "0.1.1",
-  "description": "Common TypeScript library for decentralized identity.",
+  "description": "Crypto TypeScript library for decentralized identity.",
   "scripts": {
     "precommit": "npm run lint",
     "build": "tsc",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/decentralized-identity/did-common-typescript.git"
+    "url": "https://github.com/decentralized-identity/did-crypto-typescript.git"
   },
   "main": "dist/lib/index.js",
   "types": "dist/lib/index.d.ts",
