--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "test": "nyc jasmine-ts --config=./tests/jasmine.json",
     "test-browser": "karma start karma.config.js",
+    "debug-browser": "karma start karma.config.js  --browsers Chrome_with_debugging  --single-run true",
     "lint": "tslint --fix --project .",
     "check-lint": "tslint --project ."
   },
@@ -40,14 +41,16 @@
     "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^2.0.1",
-    "karma-typescript": "^4.0.0",
+    "karma-typescript-preprocessor2": "^1.2.1",
+    "karma-webpack": "^2.0.3",
+    "awesome-typescript-loader": "^3.1.2",
+    "ts-loader": "^2.0.2",
+    "webpack": "^2.3.0",
     "node-fetch": "^2.3.0",
     "nyc": "^13.3.0",
     "source-map-support": "^0.5.9",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
-    "webpack-dev-server": "^3.2.1",
-    "webpack-jasmine-html-runner-plugin": "^0.9.0",
     "typescript": "^3.0.3"
   },
   "nyc": {
